[gd_scene load_steps=6 format=2]

[ext_resource path="res://UE_Horses.gd" type="Script" id=1]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://PanelBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://InventoryPanel.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "FADE6"
length = 0.6
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="UE_Horses" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" parent="." instance=ExtResource( 3 )]

[node name="Panel" parent="." instance=ExtResource( 4 )]

[node name="TextPanel" type="Panel" parent="."]
margin_top = 216.0
margin_right = 144.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextPanel"]
margin_left = 1.12372
margin_top = 0.749146
margin_right = 131.124
margin_bottom = 31.7491
text = "Text here."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsPanel" type="Panel" parent="."]
margin_top = 83.0
margin_right = 144.0
margin_bottom = 112.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="HBoxContainer" parent="StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 2.0
custom_constants/separation = 11
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="StatsPanel/StatsContainer"]
margin_top = 6.0
margin_right = 16.0
margin_bottom = 25.0
text = "HP
0"

[node name="Ammo" type="Label" parent="StatsPanel/StatsContainer"]
margin_left = 27.0
margin_top = 6.0
margin_right = 55.0
margin_bottom = 25.0
text = "Ammo
0"

[node name="Rep" type="Label" parent="StatsPanel/StatsContainer"]
margin_left = 66.0
margin_top = 6.0
margin_right = 86.0
margin_bottom = 25.0
text = "Rep
0"

[node name="Money" type="Label" parent="StatsPanel/StatsContainer"]
margin_left = 97.0
margin_top = 6.0
margin_right = 127.0
margin_bottom = 25.0
text = "Money
$0"

[node name="ButtonContainer" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = 60.5
margin_right = 62.5
margin_bottom = 85.5
custom_constants/vseparation = 12
custom_constants/hseparation = 14
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="ButtonContainer"]
margin_right = 55.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="ButtonContainer"]
margin_left = 69.0
margin_right = 124.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Back"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 9.0
margin_top = 11.0
margin_right = 135.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 44.0
margin_right = 82.0
margin_bottom = 12.0
text = "Location"

[node name="InventoryPanel" parent="." instance=ExtResource( 5 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FADE6 = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="ButtonContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="ButtonContainer/Button6" to="." method="_on_Button6_pressed"]
