[gd_scene load_steps=7 format=2]

[ext_resource path="res://UE_Horses.gd" type="Script" id=1]
[ext_resource path="res://StatsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://PanelBackground.tscn" type="PackedScene" id=4]
[ext_resource path="res://InventoryPanel.tscn" type="PackedScene" id=5]

[sub_resource type="Animation" id=1]
resource_name = "FADE6"
length = 0.6
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="UE_Horses" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" parent="." instance=ExtResource( 3 )]

[node name="Panel" parent="." instance=ExtResource( 4 )]

[node name="StatsPanel" parent="." instance=ExtResource( 2 )]

[node name="TextPanel" type="Panel" parent="."]
margin_top = 216.0
margin_right = 144.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextPanel"]
margin_left = 1.12372
margin_top = 0.749146
margin_right = 131.124
margin_bottom = 31.7491
text = "Welcome to the races."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomButtons1" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = 60.5
margin_right = 62.5
margin_bottom = 85.5
custom_constants/vseparation = 12
custom_constants/hseparation = 14
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="BottomButtons1"]
margin_right = 55.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="BottomButtons1"]
margin_left = 69.0
margin_right = 124.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Back"

[node name="BottomButtons2" type="GridContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = 60.5
margin_right = 62.5
margin_bottom = 85.5
custom_constants/vseparation = 12
custom_constants/hseparation = 14
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="BottomButtons2"]
margin_right = 55.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeBtn" type="Button" parent="BottomButtons2"]
margin_left = 69.0
margin_right = 124.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Change Horse"

[node name="GraphicsPanel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 12.0
margin_right = 134.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="GraphicsPanel"]
margin_left = 5.0
margin_top = 16.0
margin_right = 119.0
margin_bottom = 46.0
custom_constants/separation = -3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorseLbl1" type="Label" parent="GraphicsPanel/VBoxContainer"]
margin_right = 114.0
margin_bottom = 12.0
text = "Horse 1:"

[node name="HorseLbl2" type="Label" parent="GraphicsPanel/VBoxContainer"]
margin_top = 9.0
margin_right = 114.0
margin_bottom = 21.0
text = "Horse 2:"

[node name="HorseLbl3" type="Label" parent="GraphicsPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 114.0
margin_bottom = 30.0
text = "Horse 3:"

[node name="VBoxContainer1" type="VBoxContainer" parent="GraphicsPanel"]
visible = false
margin_left = 5.0
margin_top = 16.0
margin_right = 119.0
margin_bottom = 46.0
custom_constants/separation = -3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedHorseLbl" type="Label" parent="GraphicsPanel/VBoxContainer1"]
margin_right = 114.0
margin_bottom = 12.0
text = "Your horse:"

[node name="YourWagerLbl" type="Label" parent="GraphicsPanel/VBoxContainer1"]
margin_top = 9.0
margin_right = 114.0
margin_bottom = 21.0
text = "Your wager:"

[node name="ReturnLbl" type="Label" parent="GraphicsPanel/VBoxContainer1"]
margin_top = 18.0
margin_right = 114.0
margin_bottom = 30.0
text = "Potential return:"

[node name="VBoxContainer2" type="VBoxContainer" parent="GraphicsPanel"]
visible = false
margin_left = 5.0
margin_top = 16.0
margin_right = 119.0
margin_bottom = 46.0
custom_constants/separation = -3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinningHorseLbl" type="Label" parent="GraphicsPanel/VBoxContainer2"]
margin_right = 114.0
margin_bottom = 12.0
text = "Winning Horse:"

[node name="ResultLbl" type="Label" parent="GraphicsPanel/VBoxContainer2"]
margin_top = 9.0
margin_right = 114.0
margin_bottom = 21.0
text = "Result:"

[node name="OutcomeLbl" type="Label" parent="GraphicsPanel/VBoxContainer2"]
margin_top = 18.0
margin_right = 114.0
margin_bottom = 30.0
text = "You gained:"

[node name="HorseChoiceContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -8.0
margin_right = 47.0
margin_bottom = 54.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HorseBtn1" type="Button" parent="HorseChoiceContainer"]
margin_right = 93.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )

[node name="HorseBtn2" type="Button" parent="HorseChoiceContainer"]
margin_top = 23.0
margin_right = 93.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 15 )

[node name="HorseBtn3" type="Button" parent="HorseChoiceContainer"]
margin_top = 46.0
margin_right = 93.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 15 )

[node name="WagerChoiceContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -8.0
margin_right = 47.0
margin_bottom = 54.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncreaseWagerBtn" type="Button" parent="WagerChoiceContainer"]
margin_right = 93.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
text = "Increase Wager"

[node name="DecreaseWagerBtn" type="Button" parent="WagerChoiceContainer"]
margin_top = 23.0
margin_right = 93.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 15 )
text = "Decrease Wager"

[node name="ConfirmWagerBtn" type="Button" parent="WagerChoiceContainer"]
margin_top = 46.0
margin_right = 93.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 15 )
text = "Confirm"

[node name="ContinueContainer" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = 11.0
margin_right = 47.0
margin_bottom = 26.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueBtn" type="Button" parent="ContinueContainer"]
margin_right = 93.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
text = "New Race"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 9.0
margin_top = 11.0
margin_right = 135.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 40.0
margin_right = 85.0
margin_bottom = 12.0
text = "The Races"

[node name="InventoryPanel" parent="." instance=ExtResource( 5 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FADE6 = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BottomButtons1/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="BottomButtons1/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="BottomButtons2/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="BottomButtons2/ChangeBtn" to="." method="_on_ChangeBtn_pressed"]
[connection signal="pressed" from="HorseChoiceContainer/HorseBtn1" to="." method="_on_HorseBtn1_pressed"]
[connection signal="pressed" from="HorseChoiceContainer/HorseBtn2" to="." method="_on_HorseBtn2_pressed"]
[connection signal="pressed" from="HorseChoiceContainer/HorseBtn3" to="." method="_on_HorseBtn3_pressed"]
[connection signal="pressed" from="WagerChoiceContainer/IncreaseWagerBtn" to="." method="_on_IncreaseWagerBtn_pressed"]
[connection signal="pressed" from="WagerChoiceContainer/DecreaseWagerBtn" to="." method="_on_DecreaseWagerBtn_pressed"]
[connection signal="pressed" from="WagerChoiceContainer/ConfirmWagerBtn" to="." method="_on_ConfirmWagerBtn_pressed"]
[connection signal="pressed" from="ContinueContainer/ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
